cluster-operator/k8s/k8s-res/myweb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myweb-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: myweb.k8s.com
      http:
        paths:
          - backend:
              serviceName: myweb
              servicePort: 8080
